# forword

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  forword.cs  forword.h  forword.py
bench/: bench_forword.cpp  bench_forword.cs  bench_forword.csproj  bench_forword.py
sample_data/: de.txt  en.txt  es.txt  fr.txt  it.txt  ja.txt  ko.txt  pt.txt  ru.txt  th.txt  zh-chs.txt  zh-cht.txt
tests/: ForwordTests.cs  test_forword.cpp  test_forword.cs  test_forword.csproj  test_forword.py
